# LatticeModelImplementations

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ToDos.txt
ComplexONModel/: CMakeLists.txt
ComplexONModel/include/ComplexONModel/: simulation_header.hpp
ComplexONModel/src/: main.cpp
ComplexPolynomialModel/: CMakeLists.txt
ComplexPolynomialModel/include/ComplexPolynomialModel/: simulation_header.hpp
ComplexPolynomialModel/src/: main.cpp
ComplexXYModel/: CMakeLists.txt
ComplexXYModel/include/ComplexXYModel/: simulation_header.hpp
ComplexXYModel/python_examples/: evaluation.py
ComplexXYModel/src/: main.cpp
IsingModel/: CMakeLists.txt
IsingModel/include/IsingModel/: simulation_header.hpp
IsingModel/src/: main.cpp
ONModel/: CMakeLists.txt
ONModel/include/ONModel/: simulation_header.hpp
ONModel/src/: main.cpp
OneLinkSU3Model/: CMakeLists.txt  README.md
OneLinkSU3Model/jupyter_notebooks/: on_model.ipynb
OneLinkSU3Model/python_examples/: evaluation.py
OneLinkSU3Model/src/: main.cpp
PolynomialModel/: CMakeLists.txt
PolynomialModel/include/PolynomialModel/: simulation_header.hpp
PolynomialModel/src/: main.cpp
SU2Model/: CMakeLists.txt
SU2Model/include/SU2Model/: config.h.in  simulation_header.hpp
SU2Model/src/: main.cpp
TemplateProject/: CMakeLists.txt
TemplateProject/include/TemplateProject/: simulation_header.hpp
TemplateProject/python_scripts/: custom_measures.py  util.py
TemplateProject/src/: main.cpp
U1Model/: CMakeLists.txt
U1Model/include/U1Model/: simulation_header.hpp
U1Model/src/: main.cpp
XYModel/: CMakeLists.txt
XYModel/include/XYModel/: simulation_header.hpp
XYModel/src/: main.cpp
bash_scripts/: build_example_simulation.sh  build_examples.sh  build_main_progam.sh  build_main_program.sh  build_project.sh  build_simulation.sh  build_structure.sh  build_submodules.sh  config_template.sh  project_config.sh  project_config_template.sh  write_cmake_lists_file_main_project.sh  write_config_h_in_file.sh  write_main_cpp_file.sh  write_project_related_build_simulation_sh_file.sh  write_simulation_header_hpp_file.sh
examples/ComplexONModel/: CMakeLists.txt
examples/ComplexONModel/src/: main.cpp
examples/ComplexPolynomialModel/: CMakeLists.txt
examples/ComplexPolynomialModel/src/: main.cpp
examples/ComplexXYModel/: CMakeLists.txt
examples/ComplexXYModel/src/: main.cpp
examples/IsingModel/: CMakeLists.txt
examples/IsingModel/include/IsingModel/: simulation_header.hpp
examples/IsingModel/src/: main.cpp
examples/ONModel/: CMakeLists.txt
examples/ONModel/src/: main.cpp
examples/PolynomialModel/: CMakeLists.txt
examples/PolynomialModel/src/: main.cpp
examples/SU2Model/: CMakeLists.txt
examples/SU2Model/src/: main.cpp
examples/TemplateProject/: CMakeLists.txt  FILESTRUCTURE.md  README.md
examples/TemplateProject/data/ONModelMetropolis/raw/: raw_transformer.py
examples/TemplateProject/include/TemplateProject/: simulation_header.hpp
examples/TemplateProject/python_scripts/: on_model_measures.py
examples/TemplateProject/src/: main.cpp
examples/U1Model/: CMakeLists.txt
examples/U1Model/src/: main.cpp
examples/XYModel/: CMakeLists.txt
examples/XYModel/src/: main.cpp
examples/cmake/: CMakeLists.txt
examples/include/: simulation_header.hpp
examples/jupyter_notebooks/: complex_on_model.ipynb  complex_polynomial_model.ipynb  complex_xy_model.ipynb  expectation_values.ipynb  ising_model.ipynb  polynomial_model.ipynb  su2_model.ipynb
examples/python_scripts/: custom_measures.py  expectation_value.py  loading_configurations.py  pytorch_in_memory_dataset.py  su_two_model_measures.py
examples/simulations/ComplexONModel/: main.cpp
examples/simulations/ComplexPolynomialModel/: main.cpp
examples/simulations/ComplexXYModel/: main.cpp  simulation_header.hpp
examples/simulations/IsingModel/: main.cpp  simulation_header.hpp
examples/simulations/ONModel/: main.cpp
examples/simulations/PolynomialModel/: main.cpp  simulation_header.hpp
examples/simulations/SU2Model/: main.cpp  simulation_header.hpp
examples/src/: main.cpp
include/: simulation_header.hpp
include/global_update/: global_update.hpp  global_update_header.hpp
include/global_update/global_update_formalisms/: hybrid_monte_carlo.hpp
include/lattice/: lattice.hpp  lattice_header.hpp  lattice_model.hpp
include/lattice/lattice_models/: ising_model.hpp  xy_model.hpp
include/lattice_model_impl/applications/: algorithm_test_runs.hpp  algorithms.hpp  execution_templates.hpp
include/lattice_update/: lattice_update.hpp
include/link_lattice/: link_lattice_model.hpp
include/local_update/: local_update.hpp
include/mcmc_update/: mcmc_update_header.hpp
include/site/: site.hpp  site_header.hpp  site_model.hpp
include/site_update/: site_update.hpp
include/update_dynamics/: update_dynamics_header.hpp
jupyter_notebooks/: ReweightingComplexXY.ipynb  complex_on_model.ipynb  complex_polynomial_model.ipynb  complex_xy_model.ipynb  ising_model.ipynb  main_project_on_model.ipynb  on_model.ipynb  polynomial_model.ipynb  su2_model.ipynb  template_project.ipynb  u1_model.ipynb  xy_model.ipynb
main_project/cmake/: CMakeLists.txt
main_project/include/: simulation_header.hpp
main_project/jupyter_notebooks/: expectation_values.ipynb
main_project/src/: main.cpp  simulation_header.cpp
python_scripts/: custom_measures.py  custom_modules.py  expectation_value.py  ising_model_measures.py  loading_configurations.py  on_model_measures.py  pytorch_data_generation.py  pytorch_geometric_dataset.py  pytorch_in_memory_dataset.py  su_two_model_measures.py
simulations/ComplexONModel/: main.cpp  simulation_header.hpp
simulations/ComplexPolynomialModel/: main.cpp  simulation_header.hpp
simulations/ComplexXYModel/: main.cpp
simulations/IsingModel/: main.cpp
simulations/ONModel/: main.cpp  simulation_header.hpp
simulations/PolynomialModel/: main.cpp
simulations/SU2Model/: main.cpp
simulations/U1Model/: main.cpp  simulation_header.hpp
simulations/XYModel/: main.cpp  simulation_header.hpp
src/: main.cpp
(+171 files in other folders)
